--- a/stylesheets/scss/_general.scss
+++ b/stylesheets/scss/_general.scss
@@ -103,6 +103,7 @@ body {
     @include flex-direction(column);
     @include justify-content(space-between);
     min-height: 100vh;
+    min-width: 1px;
   }
 
   .no-flexbox .front-page & {
