--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -127,10 +127,10 @@
   width: 140px;
   height: $search-height-1;
   margin: 0;
-  padding: 8px 30px 10px 12px;
+  padding: 0 30px 0 12px;
   font-family: inherit;
   font-size: 12px;
-  line-height: 1;
+  line-height: $search-height-1;
   @include color($secondary-color, 0.67);
   @include bg($white);
   box-sizing: border-box;
@@ -143,14 +143,13 @@
   }
 
   &::-webkit-input-placeholder {
-    padding: 3px 0 4px 0;
-    line-height: 1;
     text-overflow: ellipsis;
   }
 
   &:-ms-input-placeholder {
     text-overflow: ellipsis;
   }
+
   &::-moz-placeholder {
     text-overflow: ellipsis;
   }
